# cache_latest

./: .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml
cmake/: beman.cache_last-config.cmake.in
examples/: CMakeLists.txt  identity_direct_usage.cpp
include/beman/cache_latest/: cache_latest.hpp
src/beman/cache_latest/: CMakeLists.txt  cache_latest.cpp
tests/beman/cache_latest/: CMakeLists.txt
